tests/invalid/directly_call_a_special_method.ri
struct Destroy {
    func __destructor__(self) {
        _ = self;
    }
}

func main() {
    d := Destroy();
    d.__destructor__();
}
